# Sistema-Distribuido-em-Anel

./: Makefile  README.md  meson.build  organiza.txt
include/: protocol.hpp
src/: Protocol.cpp  main.cpp  protocol.cpp
src/controller/: LogStreamBuf.cpp
src/include/: Client.hpp  Console.hpp  FailModule.hpp  LogStreamBuf.hpp  Packet.hpp  Protocol.hpp  TokenManager.hpp  Utils.hpp
src/model/: Client.cpp  Packet.cpp  TokenManager.cpp  Utils.cpp
src/view/: Console.cpp
